; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_parser.c_xmlCtxtReadDoc.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_parser.c_xmlCtxtReadDoc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @xmlCtxtReadDoc(i32* %0, i32* %1, i8* %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8* %2, i8** %9, align 8
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  %13 = load i32*, i32** %8, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %5
  store i32* null, i32** %6, align 8
  br label %39

16:                                               ; preds = %5
  %17 = load i32*, i32** %7, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %19, label %20

19:                                               ; preds = %16
  store i32* null, i32** %6, align 8
  br label %39

20:                                               ; preds = %16
  %21 = call i32 (...) @xmlInitParser()
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @xmlCtxtReset(i32* %22)
  %24 = load i32*, i32** %7, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = call i32* @xmlNewStringInputStream(i32* %24, i32* %25)
  store i32* %26, i32** %12, align 8
  %27 = load i32*, i32** %12, align 8
  %28 = icmp eq i32* %27, null
  br i1 %28, label %29, label %30

29:                                               ; preds = %20
  store i32* null, i32** %6, align 8
  br label %39

30:                                               ; preds = %20
  %31 = load i32*, i32** %7, align 8
  %32 = load i32*, i32** %12, align 8
  %33 = call i32 @inputPush(i32* %31, i32* %32)
  %34 = load i32*, i32** %7, align 8
  %35 = load i8*, i8** %9, align 8
  %36 = load i8*, i8** %10, align 8
  %37 = load i32, i32* %11, align 4
  %38 = call i32* @xmlDoRead(i32* %34, i8* %35, i8* %36, i32 %37, i32 1)
  store i32* %38, i32** %6, align 8
  br label %39

39:                                               ; preds = %30, %29, %19, %15
  %40 = load i32*, i32** %6, align 8
  ret i32* %40
}

declare dso_local i32 @xmlInitParser(...) #1

declare dso_local i32 @xmlCtxtReset(i32*) #1

declare dso_local i32* @xmlNewStringInputStream(i32*, i32*) #1

declare dso_local i32 @inputPush(i32*, i32*) #1

declare dso_local i32* @xmlDoRead(i32*, i8*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
